--- a/.github/ISSUE_TEMPLATE/New_Access_Request.yml
+++ b/.github/ISSUE_TEMPLATE/New_Access_Request.yml
@@ -5,7 +5,7 @@ body:
     id: username
     attributes:
       label: GitHub Username
-      placeholder: "Enter your GitHub username"
+      placeholder: "Enter your email address"
     validations:
       required: true
   - type: dropdown
@@ -13,7 +13,7 @@ body:
     attributes:
       label: Repository Requested
       options:
-        - Repo A
+        - Open UI Framework
         - Repo B
         - Repo C
     validations:
