--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,9 @@
   "dockerComposeFile": "../docker-compose.yml",
   "service": "claimant-services",
   "workspaceFolder": "/workspaces/Playground",
+
+    "features": {
+    },
   
   "customizations": {
     "vscode": {
