--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,27 +1,4 @@
 {
   "name": "UI Modernization Demo",
-  "dockerComposeFile": "../docker-compose.yml",
-  "service": "claimant-services",
-  "workspaceFolder": "/workspaces/Playground",
-
-    "features": {
-    },
-  
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "ms-azuretools.vscode-docker",
-        "dbaeumer.vscode-eslint",
-        "esbenp.prettier-vscode",
-        "ms-python.python",
-        "rebornix.ruby"
-      ]
-    }
-  },
-
-  "forwardPorts": [3000, 3001, 3002, 3003, 3004, 8000, 8001],
-  
-  "postCreateCommand": "docker compose up -d",
-  
-  "remoteUser": "vscode"
+  "postCreateCommand": "docker compose up -d"
 }
