--- a/modules/benefits-admin/Dockerfile
+++ b/modules/benefits-admin/Dockerfile
@@ -1,9 +1,18 @@
-FROM ruby:3.2-alpine
-
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
+EXPOSE 3004
 
-# Create a simple placeholder
-RUN echo "Benefits Admin Module - Coming Soon" > index.html
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+WORKDIR /src
+COPY ["BenefitsAdmin.csproj", "."]
+RUN dotnet restore
+COPY . .
+RUN dotnet build -c Release -o /app/build
 
-# Use a simple HTTP server to serve the placeholder
-CMD ["ruby", "-run", "-e", "httpd", ".", "-p", "3004"]
+FROM build AS publish
+RUN dotnet publish -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
+ENTRYPOINT ["dotnet", "BenefitsAdmin.dll"]
