--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       KONG_ADMIN_ERROR_LOG: /dev/stderr
       KONG_ADMIN_LISTEN: "0.0.0.0:8001"
     ports:
-      - "8000:8000"  # Proxy port
-      - "8001:8001"  # Admin port
+      - "8000:8000"
+      - "8001:8001"
     volumes:
       - ./kong/kong.yml:/kong/kong.yml
     networks:
@@ -27,6 +27,8 @@ services:
       - "3001:3001"
     volumes:
       - ./business-rules/rules.json:/app/rules.json
+    environment:
+      - KONG_URL=https://scaling-space-chainsaw-q74644jjrrgrh4q54-8000.app.github.dev
     networks:
       - ui-network
 
@@ -36,7 +38,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_API_URL=https://scaling-space-chainsaw-q74644jjrrgrh4q54-8000.app.github.dev
     networks:
       - ui-network
 
@@ -47,7 +49,7 @@ services:
       - "3002:3002"
     environment:
       - PORT=3002
-      - KONG_URL=http://kong:8000
+      - KONG_URL=https://scaling-space-chainsaw-q74644jjrrgrh4q54-8000.app.github.dev
       - RULES_ENGINE_URL=http://business-rules:3001
     networks:
       - ui-network
@@ -59,16 +61,18 @@ services:
       - "3003:3003"
     environment:
       - PORT=3003
+      - KONG_URL=https://scaling-space-chainsaw-q74644jjrrgrh4q54-8000.app.github.dev
     networks:
       - ui-network
 
-  # Benefits Administration (Ruby)
+  # Benefits Administration (C#)
   benefits-admin:
     build: ./modules/benefits-admin
     ports:
       - "3004:3004"
     environment:
       - PORT=3004
+      - KONG_URL=https://scaling-space-chainsaw-q74644jjrrgrh4q54-8000.app.github.dev
     networks:
       - ui-network
 
