--- a/modules/claimant-services/Dockerfile
+++ b/modules/claimant-services/Dockerfile
@@ -1,24 +1,14 @@
 FROM node:18-alpine
-
 WORKDIR /app
-
 # Copy package files
 COPY package*.json ./
-
 # Install dependencies
 RUN npm install
-
 # Copy application files
 COPY . .
-
-# Build the React app (for production)
-RUN npm run build
-
 # Install serve to run the production build
 RUN npm install -g serve
-
 # Expose the port
 EXPOSE 3000
-
-# Serve the production build
-CMD ["serve", "-s", "build", "-l", "3000"]
+# Build at runtime with environment variables, then serve
+CMD ["sh", "-c", "npm run build && serve -s build -l 3000"]
