--- a/modules/benefits-admin/Dockerfile
+++ b/modules/benefits-admin/Dockerfile
@@ -1,6 +1,9 @@
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 3004
+# gRPC uses HTTP/2
+ENV ASPNETCORE_URLS=http://+:3004
+ENV ASPNETCORE_PROTOCOLS=Http2
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
