--- a/modules/claims-processing/package.json
+++ b/modules/claims-processing/package.json
@@ -13,6 +13,11 @@
     "body-parser": "^1.20.2",
     "uuid": "^9.0.0"
   },
+  "dependencies": {
+  "@grpc/grpc-js": "^1.8.0",
+  "@grpc/proto-loader": "^0.7.0",
+  // ... other dependencies
+}
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
