--- a/modules/claims-processing/package.json
+++ b/modules/claims-processing/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
   "@grpc/grpc-js": "^1.8.0",
   "@grpc/proto-loader": "^0.7.0",
-  // ... other dependencies
+  "graphql-request": "^6.1.0",
 }
   "devDependencies": {
     "nodemon": "^2.0.22"
