--- a/business-rules/package.json
+++ b/business-rules/package.json
@@ -1,7 +1,7 @@
 {
   "name": "business-rules-engine",
   "version": "1.0.0",
-  "description": "Business Rules Engine for UI Modernization Demo",
+  "description": "Business Rules Engine with SOAP/XML interface",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,7 +10,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "json-rules-engine": "^6.1.2",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "soap": "^1.0.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
