--- a/modules/claims-processing/package.json
+++ b/modules/claims-processing/package.json
@@ -11,14 +11,12 @@
     "express": "^4.18.2",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@grpc/grpc-js": "^1.8.0",
+    "@grpc/proto-loader": "^0.7.0",
+    "graphql-request": "^6.1.0",
+    "soap": "^1.0.0"
   },
-  "dependencies": {
-  "@grpc/grpc-js": "^1.8.0",
-  "@grpc/proto-loader": "^0.7.0",
-  "graphql-request": "^6.1.0",
-  "soap": "^1.0.0"
-}
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
