--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -1,5 +1,34 @@
 _format_version: "3.0"
 
+# Global plugins
+plugins:
+  - name: cors
+    config:
+      origins:
+        - "*"
+      methods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+        - OPTIONS
+        - HEAD
+        - PATCH
+      headers:
+        - Accept
+        - Accept-Version
+        - Content-Length
+        - Content-MD5
+        - Content-Type
+        - Date
+        - X-Auth-Token
+        - Authorization
+      exposed_headers:
+        - X-Auth-Token
+      credentials: false
+      max_age: 3600
+      preflight_continue: false
+
 services:
   # Claims Processing Service
   - name: claims-processing-api
@@ -9,7 +38,7 @@ services:
         paths:
           - /claims
 
-# Employer Services (GraphQL)
+  # Employer Services (GraphQL)
   - name: employer-services-graphql
     url: http://employer-services:3003
     routes:
@@ -41,16 +70,3 @@ services:
           - grpc
         paths:
           - /payment.PaymentService
-    plugins:
-      - name: grpc-gateway
-        config:
-          proto: /kong/protos/payment.proto
-
-  # Benefits Administration (REST bridge for backward compatibility)
-  - name: benefits-admin-rest
-    url: http://benefits-admin:3004
-    protocol: http
-    routes:
-      - name: benefits-rest-route
-        paths:
-          - /benefits
