--- a/modules/claimant-services/Dockerfile
+++ b/modules/claimant-services/Dockerfile
@@ -1,14 +1,14 @@
-FROM node:18-alpine
+# Modules/claimant-services/Dockerfile
+FROM node:18
+
 WORKDIR /app
-# Copy package files
+
 COPY package*.json ./
-# Install dependencies
+
 RUN npm install
-# Copy application files
+
 COPY . .
-# Install serve to run the production build
-RUN npm install -g serve
-# Expose the port
+
 EXPOSE 3000
-# Build at runtime with environment variables, then serve
-CMD ["sh", "-c", "npm run build && serve -s build -l 3000"]
+
+CMD ["npm", "start"]
