--- a/modules/claims-processing/Dockerfile
+++ b/modules/claims-processing/Dockerfile
@@ -1,18 +1,14 @@
-FROM node:18-alpine
+# Modules/claims-processing/Dockerfile
+FROM node:18
 
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy application files
 COPY . .
 
-# Expose the port
 EXPOSE 3002
 
-# Start the application
 CMD ["npm", "start"]
