--- a/modules/claims-processing/package.json
+++ b/modules/claims-processing/package.json
@@ -1,21 +1,19 @@
 {
   "name": "claims-processing",
   "version": "1.0.0",
-  "description": "Claims Processing module for UI Modernization Demo",
-  "main": "server.js",
+  "description": "Claims Processing Module for UI System",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "axios": "^1.4.0",
-    "body-parser": "^1.20.2",
-    "uuid": "^9.0.0",
-    "@grpc/grpc-js": "^1.8.0",
-    "@grpc/proto-loader": "^0.7.0",
-    "graphql-request": "^6.1.0",
-    "soap": "^1.0.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
