--- a/modules/employer-services/requirements.txt
+++ b/modules/employer-services/requirements.txt
@@ -1,5 +1,9 @@
-Flask==2.3.2
-flask-cors==4.0.0
-graphene==2.1.9
+# Modules/employer-services/requirements.txt
+Flask==2.2.3
 Flask-GraphQL==2.0.1
-gunicorn==20.1.0
+graphene==3.2.1
+graphql-core==3.2.3
+graphql-relay==3.2.0
+requests==2.28.2
+python-dotenv==1.0.0
+flask-cors==3.0.10
