--- a/Modules/employer-services/requirements.txt
+++ b/Modules/employer-services/requirements.txt
@@ -1,8 +1,8 @@
 # Modules/employer-services/requirements.txt
 Flask==2.2.3
+graphql-core>=2.1,<3
 Flask-GraphQL==2.0.1
-graphene==3.2.1
-graphql-core==3.2.3
+graphene==2.1.9
 graphql-relay==3.2.0
 requests==2.28.2
 python-dotenv==1.0.0
