--- a/Modules/claimant-services/Dockerfile
+++ b/Modules/claimant-services/Dockerfile
@@ -9,6 +9,11 @@ RUN npm install
 
 COPY . .
 
+# Set the environment variable for React development server to accept all hosts
+ENV DANGEROUSLY_DISABLE_HOST_CHECK=true
+ENV WDS_SOCKET_HOST=0.0.0.0
+ENV WDS_SOCKET_PORT=3000
+
 EXPOSE 3000
 
 CMD ["npm", "start"]
