--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
 # Update the Kong-related services in the main docker-compose.yml
-  kong-database:
+kong-database:
     image: postgres:15
     environment:
       POSTGRES_USER: kong
@@ -21,13 +21,14 @@ services:
   kong-migration:
     image: kong:3.4
     depends_on:
-      - kong-database
+      kong-database:
+        condition: service_healthy
     environment:
       KONG_DATABASE: postgres
       KONG_PG_HOST: kong-database
       KONG_PG_USER: kong
       KONG_PG_PASSWORD: kongpass
-    command: "kong migrations bootstrap"
+    command: bash -c "kong migrations bootstrap && kong migrations up"
     restart: on-failure
     networks:
       - ui-system-network
@@ -37,13 +38,19 @@ services:
       context: ./Kong
       dockerfile: Dockerfile
     depends_on:
-      - kong-database
-      - kong-migration
+      kong-migration:
+        condition: service_completed_successfully
     environment:
       KONG_DATABASE: postgres
       KONG_PG_HOST: kong-database
       KONG_PG_USER: kong
       KONG_PG_PASSWORD: kongpass
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+      KONG_ADMIN_GUI_URL: http://localhost:8002
     ports:
       - "8000:8000" # Kong proxy port
       - "8001:8001" # Kong admin API
@@ -64,7 +71,8 @@ services:
       - ./Kong/scripts:/scripts
     command: ["sh", "/scripts/setup.sh"]
     depends_on:
-      - kong
+      kong:
+        condition: service_healthy
     networks:
       - ui-system-network
 
