--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,27 @@
 version: '3.8'
 
 services:
-  # API Gateway and related services
+  kong:
+    image: kong:3.4  # Using the official image directly instead of building
+    depends_on:
+      - kong-database
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kongpass
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+      KONG_ADMIN_GUI_URL: http://localhost:8002
+    ports:
+      - "8000:8000"
+      - "8001:8001"
+      - "8002:8002"
+    restart: always
+
   kong-database:
     image: postgres:15
     environment:
@@ -15,56 +35,6 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-
-  kong-migration:
-    image: kong:3.4
-    depends_on:
-      - kong-database
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kongpass
-    command: bash -c "kong migrations bootstrap && kong migrations up"
-    restart: on-failure
-
-  kong:
-    build:
-      context: ./Kong
-      dockerfile: Dockerfile
-    depends_on:
-      - kong-database
-      - kong-migration
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kongpass
-      KONG_PROXY_ACCESS_LOG: /dev/stdout
-      KONG_ADMIN_ACCESS_LOG: /dev/stdout
-      KONG_PROXY_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_LISTEN: 0.0.0.0:8001
-      KONG_ADMIN_GUI_URL: http://localhost:8002
-    ports:
-      - "8000:8000" # Kong proxy port
-      - "8001:8001" # Kong admin API
-      - "8002:8002" # Kong Manager (admin UI)
-      - "8443:8443" # Kong proxy SSL port (optional)
-      - "8444:8444" # Kong admin API SSL port (optional)
-    healthcheck:
-      test: ["CMD", "kong", "health"]
-      interval: 10s
-      timeout: 10s
-      retries: 10
-
-  kong-setup:
-    image: curlimages/curl:latest
-    volumes:
-      - ./Kong/scripts:/scripts
-    command: ["sh", "/scripts/setup.sh"]
-    depends_on:
-      - kong
 
   # Module Services
   claimant-services:
