--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - "8080:8080"  # Traefik Dashboard
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - app-network
     restart: always
 
   # Module Services
@@ -26,6 +28,8 @@ services:
       - "3000:3000"
     environment:
       - REACT_APP_API_BASE_URL=http://localhost:8000
+    networks:
+      - app-network
     restart: always
 
   claims-processing:
@@ -42,6 +46,8 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.claims.rule=PathPrefix(`/api/claims`)"
       - "traefik.http.services.claims.loadbalancer.server.port=3002"
+    networks:
+      - app-network
     restart: always
 
   employer-services:
@@ -57,6 +63,8 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.employers.rule=PathPrefix(`/graphql`)"
       - "traefik.http.services.employers.loadbalancer.server.port=3003"
+    networks:
+      - app-network
     restart: always
 
   benefits-admin:
@@ -70,6 +78,8 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.benefits.rule=PathPrefix(`/api/benefits`)"
       - "traefik.http.services.benefits.loadbalancer.server.port=3004"
+    networks:
+      - app-network
     restart: always
 
   business-rules:
@@ -85,4 +95,10 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.rules.rule=PathPrefix(`/api/rules`)"
       - "traefik.http.services.rules.loadbalancer.server.port=3001"
+    networks:
+      - app-network
     restart: always
+
+networks:
+  app-network:
+    driver: bridge
