--- a/modular-ui-system/benefits-administration/Dockerfile
+++ b/modular-ui-system/benefits-administration/Dockerfile
@@ -1,29 +1,24 @@
 # benefits-administration/Dockerfile
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
 
-# Copy csproj and restore dependencies
-COPY ["BenefitsAdmin.csproj", "./"]
-RUN dotnet restore "./BenefitsAdmin.csproj"
+WORKDIR /app
 
-# Copy the rest of the files and build
-COPY . .
-RUN dotnet build "BenefitsAdmin.csproj" -c Release -o /app/build
+# Copy everything
+COPY . ./
 
-# Publish the application
-FROM build AS publish
-RUN dotnet publish "BenefitsAdmin.csproj" -c Release -o /app/publish
+# Restore as distinct layers
+RUN dotnet restore
+
+# Build and publish a release
+RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
-COPY --from=publish /app/publish .
-
-# Add a healthcheck endpoint
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:80/health || exit 1
+COPY --from=build /app/out .
 
 EXPOSE 80
 EXPOSE 443
 
 ENTRYPOINT ["dotnet", "BenefitsAdmin.dll"]
+
