--- a/modular-ui-system/employer-services/requirements.txt
+++ b/modular-ui-system/employer-services/requirements.txt
@@ -1,7 +1,8 @@
-flask==2.2.2
+flask==2.0.1
 flask-cors==3.0.10
 graphene==2.1.9
 graphql-core>=2.1,<3
 graphql-relay>=2.0.1,<3
 flask-graphql==2.0.1
 requests==2.28.1
+werkzeug==2.0.1
