--- a/modular-ui-system/benefits-administration/BenefitsAdmin.csproj
+++ b/modular-ui-system/benefits-administration/BenefitsAdmin.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="src/Protos/benefits.proto" GrpcServices="Server" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.50.0" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
